--- a/trunk/templates/confirm.htm
+++ b/trunk/templates/confirm.htm
@@ -1,7 +1,8 @@
 {% extends 'base.htm' %}
-{% block confirmRefresh %}
+{% block head %}
   <meta http-equiv="refresh" content="5;url=http://localhost/home/" />
- {% endblock%}
+  <link rel="stylesheet" href="/static/style/sub.css">
+ {% endblock %}
 {% block content %}
 
 <div id="main_reg">
