--- a/trunk/templates/index.htm
+++ b/trunk/templates/index.htm
@@ -81,7 +81,7 @@
 				{% if error %}
 					<span class="error_tip">{{error}}</span>
 				{% endif %}
-				<form  action="./" method="post">
+				<form  action="./" method="post" name="login_form">
 				<table id="login_1">
 					<tr>
 					  <td>ÓÃ»§Ãû£º</td>
