--- a/trunk/templates/base_home.htm
+++ b/trunk/templates/base_home.htm
@@ -1,10 +1,17 @@
 {% extends 'base.htm' %}
+{% block head %}
+<link rel="stylesheet" href="/static/style/home.css">
+<script language="JavaScript" src="/static/style/prototype-1.6.0.3.js"></script>
+<script language="JavaScript" src="/static/style/switch.js"></script>
+<script language="JavaScript" src="/static/style/ajax.js"></script>
+<script language="JavaScript" src="/static/style/My97DatePicker/WdatePicker.js"></script>
+{% endblock %}
 {% block topmenu %}
 	<ul>
-        <li><a href="." class="a_nounderline">个人主页</a></li>
-        <li><a href="setting.html" class="a_nounderline">设置</a></li>
-        <li><a href="message.html" class="a_nounderline">留言板</a></li>
-        <li><a href="friends/" class="a_nounderline">好友</a></li>
+        <li><a href="../home" class="a_nounderline">个人主页</a></li>
+        <li><a href="../setting" class="a_nounderline">设置</a></li>
+        <li><a href="../message" class="a_nounderline">留言板</a></li>
+        <li><a href="../friends" class="a_nounderline">好友</a></li>
 	<ul>
 {% endblock %}
 
@@ -12,18 +19,31 @@
 <div id="main_home">
 	<div id="left">
 		<div id="me">
-		<img src="/static/images/temp_me.gif" id="img_headshot"/>
+		<img src="{{headshot}}" id="img_headshot"/>
 		<p>{{ username }}，welcome！</p>
 		<p>成就指数：{{ achievement}}</p>
-		<p>签名档：<i>{{ signature}}</i></p>
+		<p>签名档：{{ signature}}</p>
 		<p>上次登录:{{ last_login|date:"Y-m-d" }}</p>
-		<p><a href="./myinfo/">个人资料</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="../logout/">退出登录</a></p>
+		<p><a href="../myinfo">个人资料</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="../logout">退出登录</a></p>
 	</div>
 		<div id="action">
 		<div id="action_body">
-		  <p><img src="/static/images/dot_doing.gif" />&nbsp;&nbsp;<a href="#" class="a_nounderline">正在做事件</a></p>
-		  <p><img src="/static/images/dot_todo.gif" />&nbsp;&nbsp;<a href="#" class="a_nounderline">发布新事件</a></p>
-		  <p><img src="/static/images/dot_done.gif" />&nbsp;&nbsp;<a href="#" class="a_nounderline">已完成事件</a></p>
+		  <p>
+			<img src="/static/images/dot_adde.gif" />&nbsp;&nbsp;
+			<a href="../editevent" class="a_nounderline">创建新事件</a>
+		  </p>
+		  <p>
+			<img  src="/static/images/dot_doing.gif" />&nbsp;&nbsp;
+			<a href="../doing" class="a_nounderline">正在做事件</a>
+		  </p>
+		  <p>
+			<img src="/static/images/dot_todo.gif" />&nbsp;&nbsp;
+			<a href="../todo" class="a_nounderline">准备做事件</a>
+		  </p>	
+		  <p>
+			<img src="/static/images/dot_done.gif" />&nbsp;&nbsp;
+			<a href="../done" class="a_nounderline">已完成事件</a>
+		  </p>
 		</div>
 	</div>
 	</div>
