--- a/trunk/templates/home.htm
+++ b/trunk/templates/home.htm
@@ -2,40 +2,25 @@
 
 {% block middle %}
 	<div id="m1">
-				<table cellspacing="0">
-		  <tr>
-			<td width="18%" align="center" class="m1_title">事件</td>
-			<td width="10%" class="m1_title">进展</td>
-			<td width="56%" class="m1_title">近期任务</td>
-			<td width="16%" class="m1_title">期限</td>
-		  </tr>
-		  <tr>
-			<td><a href="#">软件课</a></td>
-			<td>20%</td>
-			<td>需求分析，项目规划</td>
-			<td>2008.11.12</td>
-		  </tr>
-		  <tr>
-				<td><a href="#">软件课</a></td>
-				<td>20%</td>
-				<td>需求分析，项目规划</td>
-				<td>2008.11.12</td>
-			  </tr>
-		  <tr>
-			<td><a href="#">软件课</a></td>
-			<td>20%</td>
-			<td>需求分析，项目规划</td>
-			<td>2008.11.12</td>
-		  </tr>
-		  <tr>
-			<td><a href="#">软件课</a></td>
-			<td>20%</td>
-			<td>需求分析，项目规划</td>
-			<td>2008.11.12</td>
-		  </tr>
-		</table>
-		<input name="" type="button" id="but_addevent" />
-				</div>
+	  <table cellspacing="0">
+		<tr>
+		  <td width="18%" align="center" class="m1_title">事件</td>
+		  <td width="10%" class="m1_title">进展</td>
+		  <td width="56%" class="m1_title">近期任务</td>
+		  <td width="16%" class="m1_title">期限</td>
+		</tr>
+		{% for event in event_list %}
+		<tr>
+		  <td><a href="../event/?event={{event.id}}">{{event.title}}</a></td>
+		  <td>{{event.progress}}%</td>
+		  <td>需求分析，项目规划</td>
+		  <td>{{event.over_date}}</td>
+		</tr>
+		{% endfor %}
+	  </table>
+	  <input type="button"
+	  onclick="window.location.replace('../addevent')"  id="but_addevent" />
+	</div>
 	<div id="m2">
 				<div id="switch_menu">
 					<table width="98%" border="0" cellspacing="0" cellpadding="0">
@@ -145,19 +130,22 @@
 					</div>
 				</div>
 				<div id="new_friend" style="display:none;">
-					<div class="tip">您共有3条好友请求，<a href="friends.html">转到好友列表</a>。</div>
-					<div class="each_comment">
-						<p><a href="#">l0he1g</a>：我可以加你为好友吗，我是。。。</p>
-						<p class="text_right"><a href="#">加为好友</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#">拒绝</a></p>
-					</div>
-					<div class="each_comment">
-						<p><a href="#">l0he1g</a>：我可以加你为好友吗，我是。。。</p>
-						<p class="text_right"><a href="#">加为好友</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#">拒绝</a></p>
-					</div>
-					<div class="each_comment">
-						<p><a href="#">l0he1g</a>：我可以加你为好友吗，我是。。。</p>
-						<p class="text_right"><a href="#">加为好友</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#">拒绝</a></p>
-					</div>
+					<div class="tip">您共有{{request_friend.count}}条好友请求，<a href="friends.html">转到好友列表</a>。</div>
+					{% if request_friend%}
+						{% for user in request_friend %}
+							<div class="each_comment">
+								<p><a href="#">{{user.request_user.username}}</a>：{{user.message}}</p>
+								<form id="form{{forloop.counter}}" method="post" action="../acceptfriend/">
+									<input type="hidden" name="uid" value="{{user.request_user.id}}"/>
+								</form>
+								<form id="fm{{forloop.counter}}" method="post" action="../deny/">
+									<input type="hidden" name="uid" value="{{user.request_user.id}}"/>
+								</form>
+								<p class="text_right"><a href="#" onclick="javascript:document.getElementById('form'+{{forloop.counter}}).submit();">加为好友</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" onclick="javascript:document.getElementById('fm'+{{forloop.counter}}).submit();">拒绝</a></p>
+							</div>
+						{%endfor%}
+					{%endif%}
+					
 				</div>
 			</div>
 {% endblock %}
@@ -165,11 +153,13 @@
 	<div id="friends">
 				<p class="text_title" style="font-size:14px;">我的好友</p>
 				<ul>
-					<li><a href="#">flyinsky</a></li>
-					<li><a href="#">dddddflyinsky</a></li>
-					<li><a href="#">flyinskyssssss</a></li>
-					<li><a href="#">flyinsky</a></li>
-					<li><a href="#">flyinsky</a></li>
+				{% if friends %}
+					{% for user in friends%}
+						<li><a href="#">{{user.friend_name.username}}</a></li>
+					{% endfor %}
+				{%else %}
+					<li>暂时没加好友</li>
+				{%endif%}
 				</ul>
 			</div>
 {% endblock %}
