--- a/trunk/templates/myinfo.htm
+++ b/trunk/templates/myinfo.htm
@@ -1,7 +1,7 @@
 {% extends 'base_home.htm' %}
 
 {% block middle %}
-	<div id="navigation"><a href="../home/">首页</a>->个人资料</div>
+	<div id="navigation"><a href="../home">首页</a>->个人资料</div>
     <div id="m1">
 			<div class="title1">
 				<table width="98%" border="0" cellspacing="0" cellpadding="0">
