--- a/trunk/static/style/index.css
+++ b/trunk/static/style/index.css
@@ -63,6 +63,7 @@ li{
 	padding:0 5px 0 5px;
 }	
 .font_12{font-size:12px;font-weight:normal;}
+.font_10{font-size:10px;font-weight:normal;}
 .text_blod{font-size:14px;font-weight:bold;}
 .box_date{height:20px;width:80px;border:1px #999 solid;}
 .box_name{height:20px;width:120px;border:1px #999 solid;}
