--- a/trunk/templates/base_home.htm
+++ b/trunk/templates/base_home.htm
@@ -30,7 +30,7 @@
 		<div id="action_body">
 		  <p>
 			<img src="/static/images/dot_adde.gif" />&nbsp;&nbsp;
-			<a href="../editevent" class="a_nounderline">创建新事件</a>
+			<a href="../addevent" class="a_nounderline">创建新事件</a>
 		  </p>
 		  <p>
 			<img  src="/static/images/dot_doing.gif" />&nbsp;&nbsp;
