--- a/trunk/templates/event_list.htm
+++ b/trunk/templates/event_list.htm
@@ -1,8 +1,15 @@
 {% extends 'base_home.htm' %}
 {% block middle %}
-<div id="navigation"><a href="home.html">首页</a>->正在做事件</div>
+<div id="navigation"><a href="../home">首页</a>->正在做事件</div>
 <div id="m1">
-  <div class="title1">正在做事件</div>
+  <div class="title1">
+	{%ifequal kind 'doing'%}正在做事件
+	{%else%}
+        {%ifequal kind 'todo'%}准备做事件
+	    {%else%}已完成事件
+        {% endifequal %}
+    {% endifequal %}
+</div>
   {% if events %}
   {% for event in events %}
   <div class="events">
@@ -35,7 +42,7 @@
   {%endfor%}
   {%else%}
   <br />
-  <p>唔，无所是事？休假期？</p>
+  <p>没有该类事件。</p>
   {%endif%}
 </div>
 {% endblock %}
