--- a/trunk/templates/base.htm
+++ b/trunk/templates/base.htm
@@ -22,9 +22,9 @@
       <form method="get" action="http://localhost/search/">
         <input id="search_value" name="search_value" type="text"/>
         <select id="search_kind" name="search_kind">
-          <option value="1" selected="selected">用户</option>
-          <option value="2">事件</option>
-          <option value="3">日志</option>
+          <option value="username" selected="selected">用户</option>
+          <option value="event">事件</option>
+          <option value="blog">日志</option>
         </select>
         <input type="submit" id="but_search" value=""/>
       </form>
