--- a/trunk/templates/findevent.htm
+++ b/trunk/templates/findevent.htm
@@ -7,7 +7,7 @@
 <div class="tip">共有{{counter}}个结果。</div>
 {% if ret %}
 {% for event in ret %}
-<div class="each_friend">
+<div class="each_friend2">
   <div><b><a href="../event/?event={{event.id}}">{{event.title}}</a></b></div>
   <div>{{event.description}}</div>
   <div style="color:#666;">
