--- a/trunk/templates/findblog.htm
+++ b/trunk/templates/findblog.htm
@@ -7,7 +7,7 @@
 <div class="tip">共有{{counter}}个结果。</div>
 {% if ret %}
 {% for blog in ret %}
-<div class="each_friend">
+<div class="each_friend2">
   <div><b><a href="../blog/?blog={{blog.id}}">{{blog.title}}</a></b></div>
   <div>{{blog.content|truncatewords:"100"}}...</div>
   <div style="color:#666;">
