--- a/trunk/templates/findfriend.htm
+++ b/trunk/templates/findfriend.htm
@@ -43,7 +43,7 @@
 请输入验证信息（45字以内）：</div>
     <div><textarea id="message" class="textarea"></textarea></div>
      <div>	
-	 	<input	type="hidden" id="to_user"/>
+	 	<input	type="hidden" id="to_user"/><!--由于userid动态，需一个记录员-->
 	 	<input type="button" value="发送" onclick="send_request()"/>
       	<input type="button" value="取消" onclick="$('mes_box').hide();"/>
 	</div>	
