--- a/trunk/static/style/home.css
+++ b/trunk/static/style/home.css
@@ -337,15 +337,16 @@ padding-bottom:8px;
 	background:url(../images/dot_lock.gif) no-repeat right;}
 /*-------------for findfriend.htm------------------*/
 #mes_box{
-position:absolute;
-width:220px;
-left:40%;
-top:26%;
-line-height:150%;
-font-size:12px;
-background-color:#EEE;
-padding:0px 8px 8px 8px;
-border:1px solid #999;
+	position:absolute;
+	width:220px;
+	left:40%;
+	top:26%;
+	line-height:150%;
+	font-size:12px;
+	background-color:#EEE;
+	padding:0px 8px 8px 8px;
+	border:1px solid #999;
+	overflow:scroll;
 }
 	#mes_box div{padding-top:8px;}
 .textarea{
