--- a/trunk/static/style/home.css
+++ b/trunk/static/style/home.css
@@ -135,7 +135,6 @@ margin-left:auto;
 				font-size:12px;
 				margin-bottom:8px;
 				}
-				#new_comment .each_comment_title{}
 	#main_home #right{
 	float:right;
 	}
@@ -336,7 +335,7 @@ padding-bottom:8px;
 	padding-right:14px;
 	background:url(../images/dot_lock.gif) no-repeat right;}
 /*-------------for findfriend.htm------------------*/
-#mes_box{
+#mes_box,#del_confirm_box{
 	position:absolute;
 	width:220px;
 	left:40%;
@@ -346,7 +345,6 @@ padding-bottom:8px;
 	background-color:#EEE;
 	padding:0px 8px 8px 8px;
 	border:1px solid #999;
-	overflow:scroll;
 }
 	#mes_box div{padding-top:8px;}
 .textarea{
