--- a/trunk/templates/event.htm
+++ b/trunk/templates/event.htm
@@ -23,7 +23,7 @@
 		  <a href="../editevent"
 			 class="a_raw">编辑</a>
 		</td>
-		<td width="8%"><a href="#" class="a_raw">删除</a></td>
+		<td width="8%"><a href="javascript:del_event()" class="a_raw">删除</a></td>
 	  </tr>
 	</table>
   </div>
@@ -165,54 +165,66 @@
 	</div>
   </div>
   <div id="event_concern" style="display:none;">
-    <div class="tip">您共有3个关注的伙伴，共有4个更新。</div>
-    <div class="each_comment">
-      <div class="each_comment_title">
-        <table width="98%" border="0" cellspacing="0" cellpadding="0">
-          <tr>
-            <td width="87%"><a href="#">l0he1g</a> <span class="time">(<a href="#">加油学英语</a>)</span></td>
-            <td width="13%"><a href="#">取消关注</a></td>
-          </tr>
-        </table>
-        <p><span class="time">暂无更新...</span></p>
-      </div>
+    <div class="tip">您共有{{li|length}}个关注对象,以下是他们最近一周的更新。</div>
+	{%for concern_event,hi_li in li%}
+    <div class="each_comment" id="ce_{{concern_event.id}}">
+      <table width="98%" border="0" cellspacing="0" cellpadding="0">
+        <tr>
+          <td width="87%">
+			<a href="../?user={{concern_event.user_id.id}}">{{concern_event.user_id}}</a>
+			<span class="time">(<a href="../?event={{concern_event.id}}">{{concern_event.title}}</a>)</span>
+		  </td>
+          <td width="13%">
+			<a href="javascript:remove_concern( {{event.id}},{{concern_event.id}} )">取消关注</a>
+		  </td>
+        </tr>
+      </table>
+	  {% if hi_li %}
+	  {% for hi in hi_li %}
+      <p><span class="time">{{hi.date}}</span>{{hi.content}}</p>
+	  {%endfor%}
+	  {%else%}
+      <p><span class="time">暂无更新...</span></p>
+	  {%endif%}
     </div>
-    <div class="each_comment">
-      <div class="each_comment_title">
-        <table width="98%" border="0" cellspacing="0" cellpadding="0">
-          <tr>
-            <td width="87%"><a href="#">l0he1g</a> <span class="time">(<a href="#">加油学英语</a>)</span></td>
-            <td width="13%"><a href="#">取消关注</a></td>
-          </tr>
-        </table>
-        <p><span class="time">11-12</span>添加日志“前台开发要点”</p>
-        <p><span class="time">11-12</span>添加日志“前台开发要点”</p>
-        <p><span class="time">11-12</span>添加日志“前台开发要点”</p>
-      </div>
-    </div>
-    <div class="each_comment">
-      <div class="each_comment_title">
-        <table width="98%" border="0" cellspacing="0" cellpadding="0">
-          <tr>
-            <td width="87%"><a href="#">l0he1g</a> <span class="time">(<a href="#">加油学英语</a>)</span></td>
-            <td width="13%"><a href="#">取消关注</a></td>
-          </tr>
-        </table>
-        <p><span class="time">11-12</span>添加日志“前台开发要点”</p>
-      </div>
-    </div>
+	{%endfor%}
   </div>
 </div>
 {% endblock %}
 {% block right %}
 <div id="friends">
   <p class="text_title" style="font-size:14px;">谁在关注我？</p>
+	{%if ceme_events%}
   <ul>
-    <li><a href="#">flyinsky</a><span class="left_8px">[<a href="#">关注</a>]</span></li>
-    <li><a href="#">dddddflyinsky</a></li>
-    <li><a href="#">flyinskyssssss</a></li>
-    <li><a href="#">flyinsky</a><span class="left_8px">[<a href="#">关注</a>]</span></li>
-    <li><a href="#">flyinsky</a><span class="left_8px">[<a href="#">关注</a>]</span></li>
+	{%for event in ceme_events %}
+    <li><a href="../?event={{event.id}}">{{event.user_id}}</a></li>
+	{%endfor%}
   </ul>
+	{%else%}
+	尚无人关注
+	{%endif%}
+</div>
+<div id="mes_box" style="display:none;">
+	<div>请选择您的相关事件：</div>
+    <div>
+		<select id="eid"><!--eid为要添加到的属于自己的事件-->
+		{%if myevents%}
+		{%for event in myevents %}
+		  <option value="{{event.id}}">{{event.title}}</option>
+		{% endfor %}
+		</select>
+	 	<input	type="hidden" id="recorder"/><!--记录被关注事件-->
+	 	<input type="button" value="确认" onclick="send_concern()"/>
+		{%else%}您没有任何事件!{%endif%}
+      	<input type="button" value="取消" onclick="$('mes_box').hide();"/>
+	</div>	
+</div>
+<div id="del_confirm_box" style="display:none;">
+	<div>删除一个事件，其相关的日志和关注信息都会被删除，他人也无法
+	再获得该事件的信息，并且您的成就指数将减少10，确信要删除吗？</div>
+    <div style="padding-top:8px;">
+	 	<input type="button" value="确认" onclick="send_del({{event.id}})"/>
+      	<input type="button" value="取消" onclick="$('del_confirm_box').hide();"/>
+	</div>	
 </div>
 {% endblock %}
